--- a/.github/workflows/build-openwrt-with-imagebuilder.yml
+++ b/.github/workflows/build-openwrt-with-imagebuilder.yml
@@ -174,7 +174,7 @@ on:
       openwrt_kernel:
         description: "Select kernel version"
         required: false
-        default: "6.1.y_6.6.y"
+        default: "5.10.y"
         type: choice
         options:
           - 5.4.y
@@ -199,7 +199,7 @@ on:
       kernel_usage:
         description: "Set the tags of the stable kernel."
         required: false
-        default: "stable"
+        default: "flippy"
         type: choice
         options:
           - stable
@@ -217,7 +217,7 @@ on:
           - yourname
 
 env:
-  TZ: America/New_York
+  TZ: Europe/Sofia
   IMAGEBUILDER_SH: config/imagebuilder/imagebuilder.sh
 
 jobs:
